[package]
name = "ghbot"
version = "0.1.0-nightly"
authors = ["Nouzan <clobraindie@outlook.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = "3"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "0.2", features = ["rt-threaded", "macros"] }
teloxide = "0.3"
warp = "0.2"
reqwest = "0.10"
serde_json = "1.0"
serde = { version="1.0", features = ["derive"] }
